<resources>
    <string name="app_name">BluePong</string>
    <string name="app_title">Blue.\nPong</string>
    <string name="guide_button">How to play</string>
    <string name="tutorial">
        1. Make sure that necessary services are turned on (Bluetooth / GPS for pairing).\n\n
        2. Pair with the device you want to play against. If you are already paired, you can skip this step.\n\n
        3. Start the game on either device. Connect to the game from the other device.\n\n
        4. Move the paddles by dragging or tapping. Try to beat your opponent!
    </string>
    <string name="cont">Continue</string>
    <string name="enable_services">Enable necessary services</string>
    <string name="pair_button">Pair with new device</string>
    <string name="show_paired_button">Show paired devices</string>
    <string name="create_server_button">Create game</string>
    <string name="join_server_button">Join game</string>
    <string name="pair_text">Pair with new device</string>
    <string name="scan_nearby_button">Scan for nearby devices</string>
    <string name="pair_guide">First scan for nearby devices, then tap the device you want to pair with. Make sure your GPS / Location is turned on.</string>
    <string name="paired_devices">Paired devices</string>
    <string name="join_title">Choose which\ndevice to join</string>
    <string name="join_guide">Make sure the device you are trying to join has created a game. Otherwise, you won\'t be able to join.</string>
    <string name="waiting_for_opponent">Waiting for\nopponent</string>
    <string name="trying_to_connect">Attempting to\nconnect</string>
    <string name="opponent_connected">Opponent connected!</string>
    <string name="connection_successful">Connection successful!</string>
</resources>