<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TutorialActivity">

    <TextView
        android:id="@+id/howtoplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/guide_button"
        android:textColor="?attr/colorPrimary"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/tutorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.717" />

    <TextView
        android:id="@+id/tutorial"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/tutorial"
        android:textAlignment="center"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515" />

    <Button
        android:id="@+id/contButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="endTutorial"
        android:text="@string/cont"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutorial"
        app:layout_constraintVertical_bias="0.284" />
</androidx.constraintlayout.widget.ConstraintLayout>